<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="518dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="Create Your Profile" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="212dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="519dp"
        app:srcCompat="@drawable/logo_register" />


    <EditText
        android:id="@+id/Register_with_username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_username"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textSize="14sp" />



        <EditText
            android:id="@+id/Register_with_password"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="378dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_key"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textWebPassword"
            android:textSize="14sp"
            app:passwordToggleEnabled="true" />


    <EditText
        android:id="@+id/Register_with_phoneNumber"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phonenumber"
        android:drawableLeft="@drawable/ic_phonenumber"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_phoneNumber"
        android:inputType="number"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/Register_with_DeviceSerialNumber"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="243dp"
        android:background="@drawable/custom_input_deviceid"
        android:cursorVisible="false"
        android:ellipsize="start"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/hint_deviceSerialNumber"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:layout_marginBottom="157dp"
        android:background="@drawable/custombutton_register"
        android:text="@string/Register_button" />

    <TextView
        android:id="@+id/textView_Register"
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="You already have an account? Login HERE"
        android:textSize="12sp"
        android:textStyle="bold" />


</RelativeLayout>



