<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="518dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="Sign Your Account" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="212dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="519dp"
        app:srcCompat="@drawable/logo_register" />


    <EditText
        android:id="@+id/sign_in_with_username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_username"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/sign_in_with_password"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="378dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_key"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textWebPassword"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/sign_in_with_phoneNumber"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phonenumber"
        android:drawableLeft="@drawable/ic_phonenumber"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_phoneNumber"
        android:inputType="number"
        android:textSize="14sp" />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custombutton_login"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="206dp"
        android:text="@string/Login_button" />

    <TextView
        android:id="@+id/textView_Login"
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="141dp"
        android:gravity="center"
        android:text="Do you have an account? Register HERE"
        android:textSize="12sp"
        android:textStyle="bold" />



</RelativeLayout>



